--- a/style.html
+++ b/style.html
@@ -1,5 +1,5 @@
 <html>
-    <head><link rel="stylesheet" href="style.css" type="text/css"/></head>
+    <head><link rel="stylesheet" href="gg.css" type="text/css"/></head>
       <body>
         <header>
             <title>
